--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -40,7 +40,7 @@
     height: 70px;
     border-radius: 75px;
     margin-top: 30px;
-    background: #ad2203;
+    background: #11770f;
     color: white;
     font-size: 22px;
     font-weight: 500;
