--- a/src/Components/Popuar/Popular.css
+++ b/src/Components/Popuar/Popular.css
@@ -1,7 +1,7 @@
 .popular{
     display: flex;
     flex-direction: column;
-    align-items: left;
+    align-items: center;
     gap: 10px;
     height: 80vh;
 
