--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -44,7 +44,7 @@
     gap: 30px;
     width: 100%;
     margin-bottom: 30px;
-    color: #a1a1a1;
+    color: #1a1a1a;
     font-size: 20px;
 }
 .footer-copyright hr{
